--- a/src/_sass/main.sass
+++ b/src/_sass/main.sass
@@ -1,1 +1,78 @@
 @import mixins
+
+.layout 
+  width: 1000px
+  left: 50%
+  position: relative
+  margin-left: -500px
+
+//----------------отступы и положения блоков
+
+.layout 
+  .header
+    margin-bottom: 20px
+    margin-top: 20px
+
+.header
+  .logo
+    position: absolute
+    top: -6px
+    left: 400px
+  .big-phone
+    position: absolute
+    top: 0px
+    right: 0px
+
+.layout
+  .selection-and-navigation
+    margin-bottom: 30px
+
+.selection-and-navigation
+  position: relative
+  .top-menu
+    position: absolute
+    top: 0px
+  .filtering
+    position: absolute
+    top: 50px
+  .filter-slider
+    position: absolute
+    top: 80px
+
+
+//-----------------свойства блоков
+.header
+  height: 50px
+  font-size: 14px
+  color: #2b2b2b
+  text-transform: uppercase 
+
+.logo
+  width: 203px
+  height: 51px
+  background: url(images/logo.gif)
+
+.big-phone
+  color: #505050
+  border-bottom: 1px dashed #505050
+  cursor: pointer
+  &__callback
+    color: red
+.selection-and-navigation
+  width: 1000px
+  height: 338px
+  background: url(images/grey-bg.jpg)
+  border-top: 2px solid #505050
+.top-menu
+  &__itm
+    display: inline-block
+    padding-left: 5px
+    padding-right: 5px
+    margin-left: -1px
+    height: 30px
+    background-color: #fff
+    border: 1px solid #ccc
+
+.filtering
+  width: 700px
+  height: 300px
