примерное позиционирование внутри блока filter-slider

--- a/src/_sass/main.sass
+++ b/src/_sass/main.sass
@@ -1,5 +1,6 @@
 @import mixins
 
+
 .layout 
   width: 1000px
   left: 50%
@@ -32,12 +33,24 @@
   .top-menu
     position: absolute
     top: 0px
+    left: 200px
+
   .filtering
     position: absolute
     top: 50px
   .filter-slider
     position: absolute
     top: 80px
+  .filter-age
+    position: absolute
+    top: 170px
+  .filter-checkbox
+    position: absolute
+    top: 50px
+    left: 600px
+  .filter-checkbox label
+    display: block
+    margin-top: 10px
 
 
 //-----------------свойства блоков
