--- a/src/index.jade
+++ b/src/index.jade
@@ -1,5 +1,6 @@
 include _vendor/bemto
 
+
 +b.header
   +b.slogan
     | Покупка и продажа действующего <br>
@@ -15,7 +16,7 @@ include _vendor/bemto
       | Главная
     +e('a').itm(href='#')
       | Покупателю бизнеса
-    +e.submenu
+    //+e.submenu
       +e('a').submenu-itm(href='#')
         | Как происходит продажа
       +e('a').submenu-itm(href='#')
